--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Kurtsley 2024 -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,150 +10,185 @@
     <link href='css/style.css' rel="stylesheet" />
     <link href="https://api.mapbox.com/mapbox-gl-js/v3.4.0/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.4.0/mapbox-gl.js"></script>
-    <script id="search-js" defer src="https://api.mapbox.com/search-js/v1.0.0-beta.24/web.js"></script>
+
+    <!-- Load the `mapbox-gl-geocoder` plugin. -->
+    <script
+        src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.3/mapbox-gl-geocoder.min.js"></script>
+    <link rel="stylesheet"
+        href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.3/mapbox-gl-geocoder.css"
+        type="text/css">
 </head>
 
 <body>
-    <mapbox-search-box id="searchBox"
-        access-token="pk.eyJ1Ijoia3VydHNsZXkiLCJhIjoiY2xkMG9qZ2k5MDM5djNxcDdlcmgyY2JhdSJ9.egjns8W_yyCThkjoE0W1lg"
-        proximity="0,0"></mapbox-search-box>
     <div id="map"></div>
     <script>
-        const script = document.getElementById('search-js');
+        const accessToken = 'pk.eyJ1Ijoia3VydHNsZXkiLCJhIjoiY2xkMG9qZ2k5MDM5djNxcDdlcmgyY2JhdSJ9.egjns8W_yyCThkjoE0W1lg';
 
-        script.onload = function () {
-            const accessToken = 'pk.eyJ1Ijoia3VydHNsZXkiLCJhIjoiY2xkMG9qZ2k5MDM5djNxcDdlcmgyY2JhdSJ9.egjns8W_yyCThkjoE0W1lg';
+        const map = new mapboxgl.Map({
+            accessToken: accessToken,
+            container: 'map',
+            style: 'mapbox://styles/mapbox/satellite-streets-v12',
+            center: [-103.43862939401251, 47.78908392054084],  // Coordinates for the center
+            zoom: 10,
+            customAttribution: "Coded by Kurtsley 2024",
+        });
 
-            const map = new mapboxgl.Map({
-                accessToken: accessToken,
-                container: 'map',
-                style: 'mapbox://styles/mapbox/satellite-streets-v12',
-                center: [-103.43862939401251, 47.78908392054084],  // Coordinates for the center
-                zoom: 10,
-                customAttribution: "Coded by Kurtsley 2024",
-            });
+        let geojsonData = null;
 
-            const searchBox = new mapboxsearch.MapboxSearchBox();
+        fetch('data/addresses.geojson')
+            .then(response => response.json())
+            .then(data => {
+                geojsonData = data;
+            })
+            .catch(error => console.error('Error loading geojson data', error));
 
-            searchBox.accessToken = accessToken;
+        function localGeocoder(query) {
+            const matchingFeatures = [];
 
-            searchBox.mapboxgl = mapboxgl;
-            searchBox.bindMap(map);
+            if (!geojsonData) return [];
 
-            map.on('style.load', function () {
-                // Zoom control
-                map.addControl(new mapboxgl.NavigationControl(), 'top-right');
+            const features = geojsonData.features;
 
-                map.addSource('points', {
-                    type: 'geojson',
-                    data: 'data/addresses.geojson',
-                    cluster: true,
-                    clusterMaxZoom: 14,
-                    clusterRadius: 50,
-                });
-
-                map.addLayer({
-                    id: 'clusters',
-                    type: 'circle',
-                    source: 'points',
-                    filter: ['has', 'point_count'], // Only clusters
-                    paint: {
-                        'circle-color': [
-                            'step',
-                            ['get', 'point_count'],
-                            '#51bbd6', // Cluster color for low counts
-                            100, '#f28cb1', // Cluster color for medium counts
-                            750, '#f1f075' // Cluster color for high counts
-                        ],
-                        'circle-radius': [
-                            'step',
-                            ['get', 'point_count'],
-                            20, // Radius for low counts
-                            100, 30, // Radius for medium counts
-                            750, 40 // Radius for high counts
-                        ],
-                        'circle-opacity': 0.7,
-                    }
-                });
-
-                map.addLayer({
-                    id: 'cluster-count',
-                    type: 'symbol',
-                    source: 'points',
-                    filter: ['has', 'point_count'], // Only clusters
-                    layout: {
-                        'text-field': '{point_count_abbreviated}',
-                        'text-font': ['Open Sans Bold', 'Arial Unicode MS Bold'],
-                        'text-size': 12
-                    }
-                });
-
-                map.addLayer({
-                    id: 'unclustered-point',
-                    type: 'circle',
-                    source: 'points',
-                    filter: ['!', ['has', 'point_count']], // Only non-clusters
-                    paint: {
-                        'circle-radius': [
-                            'interpolate',
-                            ['linear'],
-                            ['zoom'],
-                            0, 4,
-                            10, 8,
-                            20, 12,
-                        ],
-                        'circle-color': '#F0FD05',
-                        'circle-opacity': 0.7,
-                    }
-                });
-
-                map.addLayer({
-                    id: 'labels',
-                    type: 'symbol',
-                    source: 'points',
-                    layout: {
-                        'text-field': ['get', 'address'],
-                        'text-size': 14,
-                        'text-offset': [2, -2],
-                        'text-font': ['Open Sans Bold', 'Arial Unicode MS Bold'],
-                        'visibility': 'none',
-                    },
-                    paint: {
-                        'text-color': '#FFFFFF'
-                    },
-                });
-
-
-                map.on('zoom', function () {
-                    const zoomLevel = map.getZoom();
-
-                    if (zoomLevel >= 14) {
-                        map.setLayoutProperty('labels', 'visibility', 'visible');
-                    } else {
-                        map.setLayoutProperty('labels', 'visibility', 'none');
-                    }
-                });
-
-                map.on('mouseenter', 'unclustered-point', () => {
-                    map.getCanvas().style.cursor = 'pointer';
-                });
-
-                map.on('mouseleave', 'unclustered-point', () => {
-                    map.getCanvas().style.cursor = '';
-                });
-
-                map.on('click', 'unclustered-point', (e) => {
-                    const coords = e.features[0].geometry.coordinates.slice();
-                    const address = e.features[0].properties.address || 'No address available';
-
-                    new mapboxgl.Popup()
-                        .setLngLat(coords)
-                        .setHTML(address)
-                        .addTo(map);
-                });
-            });
+            for (const feature of features) {
+                if (
+                    feature.properties.address &&
+                    feature.properties.address.toLowerCase().includes(query.toLowerCase())
+                ) {
+                    feature['place_name'] = feature.properties.address;
+                    feature['center'] = feature.geometry.coordinates;
+                    matchingFeatures.push(feature);
+                }
+            }
+            return matchingFeatures;
         }
 
+        map.on('style.load', function () {
+            // Zoom control
+            map.addControl(new mapboxgl.NavigationControl(), 'top-right');
+
+            map.addSource('points', {
+                type: 'geojson',
+                data: 'data/addresses.geojson',
+                cluster: true,
+                clusterMaxZoom: 14,
+                clusterRadius: 50,
+            });
+
+            map.addLayer({
+                id: 'clusters',
+                type: 'circle',
+                source: 'points',
+                filter: ['has', 'point_count'], // Only clusters
+                paint: {
+                    'circle-color': [
+                        'step',
+                        ['get', 'point_count'],
+                        '#51bbd6', // Cluster color for low counts
+                        100, '#f28cb1', // Cluster color for medium counts
+                        750, '#f1f075' // Cluster color for high counts
+                    ],
+                    'circle-radius': [
+                        'step',
+                        ['get', 'point_count'],
+                        20, // Radius for low counts
+                        100, 30, // Radius for medium counts
+                        750, 40 // Radius for high counts
+                    ],
+                    'circle-opacity': 0.7,
+                }
+            });
+
+            map.addLayer({
+                id: 'cluster-count',
+                type: 'symbol',
+                source: 'points',
+                filter: ['has', 'point_count'], // Only clusters
+                layout: {
+                    'text-field': '{point_count_abbreviated}',
+                    'text-font': ['Open Sans Bold', 'Arial Unicode MS Bold'],
+                    'text-size': 12
+                }
+            });
+
+            map.addLayer({
+                id: 'unclustered-point',
+                type: 'circle',
+                source: 'points',
+                filter: ['!', ['has', 'point_count']], // Only non-clusters
+                paint: {
+                    'circle-radius': [
+                        'interpolate',
+                        ['linear'],
+                        ['zoom'],
+                        0, 4,
+                        10, 8,
+                        20, 12,
+                    ],
+                    'circle-color': '#F0FD05',
+                    'circle-opacity': 0.7,
+                }
+            });
+
+            map.addLayer({
+                id: 'labels',
+                type: 'symbol',
+                source: 'points',
+                layout: {
+                    'text-field': ['get', 'address'],
+                    'text-size': 14,
+                    'text-offset': [2, -2],
+                    'text-font': ['Open Sans Bold', 'Arial Unicode MS Bold'],
+                    'visibility': 'none',
+                },
+                paint: {
+                    'text-color': '#FFFFFF'
+                },
+            });
+
+            const geocoder = new MapboxGeocoder({
+                accessToken: accessToken,
+                mapboxgl: mapboxgl,
+                localGeocoderOnly: true,
+                localGeocoder: localGeocoder,
+                placeholder: "Enter address...",
+                zoom: 14,
+                marker: false,
+            });
+
+            map.addControl(geocoder, 'top-left');
+
+            geocoder.on('result', (e) => {
+                map.flyTo({ center: e.result.center, zoom: 17 });
+            });
+
+            map.on('zoom', function () {
+                const zoomLevel = map.getZoom();
+
+                if (zoomLevel >= 14) {
+                    map.setLayoutProperty('labels', 'visibility', 'visible');
+                } else {
+                    map.setLayoutProperty('labels', 'visibility', 'none');
+                }
+            });
+
+            map.on('mouseenter', 'unclustered-point', () => {
+                map.getCanvas().style.cursor = 'pointer';
+            });
+
+            map.on('mouseleave', 'unclustered-point', () => {
+                map.getCanvas().style.cursor = '';
+            });
+
+            map.on('click', 'unclustered-point', (e) => {
+                const coords = e.features[0].geometry.coordinates.slice();
+                const address = e.features[0].properties.address || 'No address available';
+
+                new mapboxgl.Popup()
+                    .setLngLat(coords)
+                    .setHTML(address)
+                    .addTo(map);
+            });
+        });
 
     </script>
 </body>
