--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <img src="https://cdn.buymeacoffee.com/buttons/v2/default-green.png" alt="Buy Me A Coffee"
                 style="height: 40px !important;width: auto !important;"></a>
         <script>
-            const accessToken = 'pk.eyJ1Ijoia3VydHNsZXkiLCJhIjoiY2xkMG9qZ2k5MDM5djNxcDdlcmgyY2JhdSJ9.egjns8W_yyCThkjoE0W1lg';
+            const accessToken = 'pk.eyJ1Ijoia3VydHNsZXkiLCJhIjoiY200Z2lscDB1MHBpejJqcTJyMGU2bXBzcyJ9.BmQeaAIXRV2WbrDWtgxuog';
 
             const map = new mapboxgl.Map({
                 accessToken: accessToken,
@@ -35,7 +35,7 @@
                 style: 'mapbox://styles/mapbox/satellite-streets-v12',
                 center: [-103.43862939401251, 47.78908392054084],  // Coordinates for the center
                 zoom: 10,
-                customAttribution: "Coded by Kurtsley 2024",
+                customAttribution: "Developed by Kurtsley",
             });
 
             let geojsonData = null;
