Change token again

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <img src="https://cdn.buymeacoffee.com/buttons/v2/default-green.png" alt="Buy Me A Coffee"
                 style="height: 40px !important;width: auto !important;"></a>
         <script>
-            const accessToken = 'pk.eyJ1Ijoia3VydHNsZXkiLCJhIjoiY200Z2lscDB1MHBpejJqcTJyMGU2bXBzcyJ9.BmQeaAIXRV2WbrDWtgxuog';
+            const accessToken = 'pk.eyJ1Ijoia3VydHNsZXkiLCJhIjoiY200Z2o3a3FnMW4xMjJqcTAxd3U2dXpqMiJ9.MEvI5BsjappREQFxpcHvow';
 
             const map = new mapboxgl.Map({
                 accessToken: accessToken,
