--- a/index.html
+++ b/index.html
@@ -92,6 +92,16 @@
                 // Zoom control
                 map.addControl(new mapboxgl.NavigationControl(), 'top-right');
 
+                // Restrict zoom
+                map.setMinZoom(8);
+                map.setMaxZoom(17);
+
+                // Set bounds
+                map.setMaxBounds([
+                    [-104.25740512465673, 47.19530549590402],
+                    [-102.41197113708417, 48.28473437281036]
+                ]);
+
                 map.addSource('points', {
                     type: 'geojson',
                     data: 'data/addresses.geojson',
