--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
         <script>
             const accessToken = 'pk.eyJ1Ijoia3VydHNsZXkiLCJhIjoiY200Z2o3a3FnMW4xMjJqcTAxd3U2dXpqMiJ9.MEvI5BsjappREQFxpcHvow';
 
+            if (!localStorage.getItem('alertShown')) {
+                
+                alert("John, I fixed the ND Highway issue. You're welcome. -Kurt"); 
+                localStorage.setItem('alertShown', 'true');
+                
+            }
+
             const map = new mapboxgl.Map({
                 accessToken: accessToken,
                 container: 'map',
