--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
         type="text/css">
     <!-- Popup.js -->
     <script src="https://cdn.jsdelivr.net/npm/@simondmc/popup-js@1.4.2/popup.min.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TYG7VLF1W9"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-TYG7VLF1W9');
+    </script>
 </head>
 
 <body>
