Update change popup

--- a/index.html
+++ b/index.html
@@ -211,8 +211,9 @@
                     showOnce: true,
                     content: `
                         popup-style§What's New
-                        big-margin§- Larger click area for navigation
-                        - More search results available
+                        big-margin§- Even larger click area for navigation
+                        - New color!
+                        - Automatic updates
                         big-margin§- Kurt
                         
                         `,
