--- a/index.html
+++ b/index.html
@@ -35,11 +35,15 @@
             const map = new mapboxgl.Map({
                 accessToken: accessToken,
                 container: 'map',
-                style: 'mapbox://styles/kurtsley/cm4m3fm08004001s854hee83t',
+                style: 'mapbox://styles/kurtsley/cm8w4kw9000f101qk6lrzc39e',
                 center: [-103.43862939401251, 47.78908392054084],  // Coordinates for the center
                 zoom: 10,
                 customAttribution: "Developed by Kurtsley",
             });
+
+            // No zoom or rotate
+            map.dragRotate.disable();
+            map.touchZoomRotate.disableRotation();
 
             // Move donate button to see attribution
             const moreinfobtn = document.querySelector('.mapboxgl-ctrl-attrib-button');
@@ -97,86 +101,13 @@
 
                 // Restrict zoom
                 map.setMinZoom(8);
-                map.setMaxZoom(17);
-
-                map.addSource('points', {
-                    type: 'geojson',
-                    data: 'data/addresses-new.geojson',
-                    cluster: true,
-                    clusterMaxZoom: 14,
-                    clusterRadius: 50,
-                });
-
-                map.addLayer({
-                    id: 'clusters',
-                    type: 'circle',
-                    source: 'points',
-                    filter: ['has', 'point_count'], // Only clusters
-                    paint: {
-                        'circle-color': [
-                            'step',
-                            ['get', 'point_count'],
-                            '#51bbd6', // Cluster color for low counts
-                            100, '#f28cb1', // Cluster color for medium counts
-                            750, '#f1f075' // Cluster color for high counts
-                        ],
-                        'circle-radius': [
-                            'step',
-                            ['get', 'point_count'],
-                            20, // Radius for low counts
-                            100, 30, // Radius for medium counts
-                            750, 40 // Radius for high counts
-                        ],
-                        'circle-opacity': 0.7,
-                    }
-                });
-
-                map.addLayer({
-                    id: 'cluster-count',
-                    type: 'symbol',
-                    source: 'points',
-                    filter: ['has', 'point_count'], // Only clusters
-                    layout: {
-                        'text-field': '{point_count_abbreviated}',
-                        'text-font': ['Open Sans Bold', 'Arial Unicode MS Bold'],
-                        'text-size': 12
-                    }
-                });
-
-                map.addLayer({
-                    id: 'unclustered-point',
-                    type: 'circle',
-                    source: 'points',
-                    filter: ['!', ['has', 'point_count']], // Only non-clusters
-                    paint: {
-                        'circle-radius': [
-                            'interpolate',
-                            ['linear'],
-                            ['zoom'],
-                            0, 4,
-                            10, 8,
-                            20, 12,
-                        ],
-                        'circle-color': '#FF6600',
-                        'circle-opacity': 0.8,
-                    }
-                });
-
-                map.addLayer({
-                    id: 'clickArea',
-                    type: 'circle',
-                    source: 'points',
-                    filter: ['!', ['has', 'point_count']], // Only non-clusters
-                    paint: {
-                        'circle-radius': 20,
-                        'circle-color': 'rgba(0, 0, 0, 0)',
-                    },
-                });
+                map.setMaxZoom(18);
 
                 map.addLayer({
                     id: 'labels',
                     type: 'symbol',
-                    source: 'points',
+                    source: 'composite',
+                    'source-layer': 'addresses',
                     layout: {
                         'text-field': ['get', 'address'],
                         'text-size': 14,
@@ -185,7 +116,10 @@
                         'visibility': 'none',
                     },
                     paint: {
-                        'text-color': '#FFFFFF'
+                        'text-color': '#FFFFFF',
+                        'text-halo-color': '#000000',
+                        'text-halo-width': 1,
+                        'text-halo-blur': 0.5
                     },
                 });
 
@@ -220,7 +154,7 @@
                 });
 
                 geocoder.on('result', (e) => {
-                    map.flyTo({ center: e.result.center, zoom: 17 });
+                    map.flyTo({ center: e.result.center, zoom: 18 });
 
                     // Clear the search box
                     const inputBox = document.querySelector('.mapboxgl-ctrl-geocoder input');
@@ -239,17 +173,22 @@
                     }
                 });
 
-                map.on('mouseenter', 'clickArea', () => {
+                map.on('mouseenter', 'addresses', () => {
                     map.getCanvas().style.cursor = 'pointer';
                 });
 
-                map.on('mouseleave', 'clickArea', () => {
+                map.on('mouseleave', 'addresses', () => {
                     map.getCanvas().style.cursor = '';
                 });
 
-                map.on('click', 'clickArea', (e) => {
-                    const feature = e.features[0];
-                    window.open(navigateURL(feature), '_blank');
+                map.on('click', 'addresses', (e) => {
+                    const features = map.queryRenderedFeatures(e.point, {
+                        layers: ['addresses'],
+                    });
+                    if (features[0]) {
+                        const feature = features[0];
+                        window.open(navigateURL(feature), '_blank');
+                    }
                 });
             });
 
