--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
                     zoom: 14,
                     marker: false,
                     limit: 20,
+                    minLength: 3
                 });
 
                 map.addControl(geocoder, 'top-left');
