--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 style: 'mapbox://styles/kurtsley/cm8w4kw9000f101qk6lrzc39e',
                 center: [-103.43862939401251, 47.78908392054084],  // Coordinates for the center
                 zoom: 10,
-                customAttribution: "Developed by Kurtsley",
+                customAttribution: "© Kurtsley 2025",
             });
 
             // No zoom or rotate
