Fix geojson name

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             });
 
             let geojsonData = null;
-            fetch('data/addresses-new.geojson')
+            fetch('data/address.geojson')
                 .then(response => response.json())
                 .then(data => {
                     geojsonData = data;
